--- a/Pro.Web/Pro.Web.csproj
+++ b/Pro.Web/Pro.Web.csproj
@@ -1138,6 +1138,8 @@
     <Content Include="Scripts\ztree\js\jquery.ztree.exhide.min.js" />
     <Content Include="Test\Index.html" />
     <Content Include="Test\Index1.html" />
+    <Content Include="Test\Share.html" />
+    <Content Include="Test\Test.html" />
     <Content Include="Web.config">
       <SubType>Designer</SubType>
     </Content>
