--- a/.gitignore
+++ b/.gitignore
@@ -11,14 +11,13 @@
 *.userprefs
 
 # Build results
-[Dd]ebug/
+
 [Dd]ebugPublic/
-[Rr]elease/
+
 [Rr]eleases/
 x64/
 x86/
 bld/
-[Bb]in/
 [Oo]bj/
 [Ll]og/
 
@@ -259,3 +258,10 @@ paket-files/
 # Python Tools for Visual Studio (PTVS)
 __pycache__/
 *.pyc
+/Pro.Web/bin
+/Pro.Repository/bin
+/Pro.Model/bin
+/Pro.Interface/bin
+/Pro.Extension/bin
+/Pro.Dal/bin
+/Pro.Common/bin
