--- a/Pro.Common/Pro.Common.csproj
+++ b/Pro.Common/Pro.Common.csproj
@@ -31,8 +31,8 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="AspNetPager, Version=7.5.1.0, Culture=neutral, PublicKeyToken=fb0a0fe055d40fd4, processorArchitecture=MSIL">
-      <HintPath>..\packages\AspNetPager.7.5.1.0\lib\AspNetPager.dll</HintPath>
+    <Reference Include="AspNetPager">
+      <HintPath>..\..\ProjectDemo-dev\packages\AspNetPager.7.5.1.0\lib\AspNetPager.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.ComponentModel.DataAnnotations" />
