--- a/Pro.Model/Pro.Model.csproj
+++ b/Pro.Model/Pro.Model.csproj
@@ -34,6 +34,9 @@
     <Reference Include="EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089, processorArchitecture=MSIL">
       <HintPath>..\packages\EntityFramework.6.1.3\lib\net45\EntityFramework.dll</HintPath>
     </Reference>
+    <Reference Include="EntityFramework.Extended, Version=6.0.0.0, Culture=neutral, PublicKeyToken=05b7e29bdd433584, processorArchitecture=MSIL">
+      <HintPath>..\packages\EntityFramework.Extended.6.1.0.168\lib\net45\EntityFramework.Extended.dll</HintPath>
+    </Reference>
     <Reference Include="EntityFramework.SqlServer, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089, processorArchitecture=MSIL">
       <HintPath>..\packages\EntityFramework.6.1.3\lib\net45\EntityFramework.SqlServer.dll</HintPath>
     </Reference>
@@ -49,17 +52,19 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="dto\StudentDTO.cs" />
+    <Compile Include="EfExtensions.cs" />
     <Compile Include="Entities\Company.cs" />
     <Compile Include="Entities\Constellation.cs" />
     <Compile Include="EFDbContext.cs" />
     <Compile Include="Entities\Grade.cs" />
-    <Compile Include="Entities\PM_ProjectInfo.cs" />
     <Compile Include="Entities\Student.cs" />
+    <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="model\Grade_partial.cs" />
     <Compile Include="model\Student_partial.cs" />
     <Compile Include="model\TreesNode.cs" />
     <Compile Include="model\TreeVO.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="query\StudentQuery.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
