简单配置调整

--- a/Pro.Web/Views/Web.config
+++ b/Pro.Web/Views/Web.config
@@ -10,8 +10,7 @@
 
   <connectionStrings>
     <!--<add name="DefaultConnection" connectionString="Data Source=(LocalDb)\v11.0;AttachDbFilename=|DataDirectory|\aspnet-MySchool.MvcWeb-20160428042515.mdf;Initial Catalog=aspnet-MySchool.MvcWeb-20160428042515;Integrated Security=True" providerName="System.Data.SqlClient" />-->
-    <add name="MySchoolConnection" connectionString="Data Source=.;Initial Catalog=MySchool;Persist Security Info=True;User ID=sa;Password=sasa;MultipleActiveResultSets=True" providerName="System.Data.SqlClient" />
-    <add name="DefaultConnection" providerName="System.Data.SqlClient" connectionString="Data Source=.;Initial Catalog=MySchool;UID=sa;PWD=sa1221.cc" />
+    <add name="MySchoolConnection" connectionString="Data Source=.;Initial Catalog=MySchool;Persist Security Info=True;User ID=sa;Password=sa1221.cc;MultipleActiveResultSets=True" providerName="System.Data.SqlClient" />
   </connectionStrings>
 
   <system.web.webPages.razor>
